--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=jobportal
 
 # Server port (optional, default is 8080)
-server.port=8080
+server.port=8081
 
 # Spring Security - In-memory user
 spring.security.user.name=test
@@ -19,7 +19,7 @@ spring.datasource.password=Shubham@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
